_sass/_layout.scss
/**
 * Site header
 */
.site-header {
    border-bottom: 1px solid #ad322d;
    color: #fff;
    min-height: 40px;
    background: #3F4B73;
    height: 60px;

    // Positioning context for the mobile navigation icon
    position: relative;

    img.brand {
        max-width: 200px;
        margin-bottom: 10px;
        margin-right: 10px;
    }

    a.page-link,
    a.page-link:focus,
    a.page-link:active {
        color: white;
    }

    a.page-link:hover {
        color: #F8F273;
    }
}

.site-title {
    font-size: 18px;
    font-weight: bold;
    text-transform: uppercase;
    line-height: 56px;
    letter-spacing: -1px;
    margin-bottom: 0;
    margin-right: 23px;
    float: left;

    &, &:visited {
        color: #e29fa0;
    }
    &:hover {
        color: #fff;
        text-decoration: none;
    }
}

.page-link {
    font-size: 16px;
    font-weight: bold;
    text-transform: uppercase;
    line-height: 56px;
    letter-spacing: -1px;
    margin-bottom: 0;
    margin-right: 20px;
    float: left;

    &, &:visited {
        color: #e29fa0;
    }
    &:hover {
        color: #fff;
        text-decoration: none;
    }
}


/**
 * Site footer
 */
.site-footer {
    color: #a6a7a9;
    background-color: #4d4f53;
    padding: 40px 0;
    font-size: 0.9em;
    line-height: 1.3;
    width: 100%;
    margin: 1em 0 0;

    .icons {
        margin-bottom: 20px;
        text-align: center;

        .icon-container {
            display: inline-block;
            margin: 0 1.125rem;
            min-width: 110px;
            font-size: 1.1em;

            @include media-query($on-palm) {
                display: block;
                width: 100%;
            }

            .icon {
                .footer-icon {
                    max-width: 18px;
                    opacity: 0.5;
                    margin-right: 5px;
                }

                @include media-query($on-palm) {
                    text-align: center;
                }

                img {
                    @include media-query($on-palm) {
                        display: block;
                        margin: 5px auto;
                        width: 20px;
                    }
                }
            }
        }
    }

    a {
        color: #a6a7a9;
        font-weight: normal;
    }

    a:hover {
        color: #ccc;
    }

    .footer-content {
        display: flex;
        align-items: center;
        flex-shrink: 0;
        justify-content: center;
        max-width: 45rem;
        margin: 0 auto;

        a.logo {
            color: white;
            display: inline-block;
            border-right: 0.0625rem solid #666;
            padding-right: 1.25rem;
            margin-right: 1.25rem;
            margin-top: 0;
            padding-top: 0;
        }

        p {
            color: rgba(255, 255, 255, 0.5);
            text-align: left;
            width: calc(100% - 10.375rem);
        }
    }
}


/**
 * Page content
 */
.page-content {
    .wrapper {
        background: #FFF;
        margin: 0 auto;
        padding: 40px;
        display: block;
        box-shadow: 0 0 0 1px #fff inset;
    }

    h2 {
        margin-top: 20px;
    }
}

.page-heading, .home h1 {
    color: $brand-color;
    margin-top: 5px;
    font-size: 4.5rem;
    text-align: center;
}

.home {
    text-align: center;

    h2 {
        font-size: 2rem;
        text-align: center;
        margin: 1.5em auto;
        padding-top: 0em;
        clear: both;
    }

    .area {
        text-align: center;
        font-weight: bold;

        img {
            margin-bottom: 10px;
        }

        &.area-small {
            text-align: center;

            img {
                max-width: 100px;
            }
        }
    }

    .disabled {
        filter: grayscale(90%) opacity(25%);
        -webkit-filter: grayscale(90%) opacity(25%);
        font-weight: normal;
    }
}

.post-list {
    margin-left: 0;
    list-style: none;

    > li {
        margin-bottom: $spacing-unit;
    }
}

.post-meta {
    font-size: $small-font-size;
    color: $grey-color;
}

.post-link {
    display: block;
    font-size: 24px;
}



/**
 * Posts
 */
.post {
    position: relative;

    #back-top {
        display: none;
        position: fixed;
        bottom: 30px;
        font-size: 2em;
    }
}

.post-header {
    margin-bottom: $spacing-unit;
}

.post-title {
    font-size: 42px;
    letter-spacing: -1px;
    line-height: 1;

    @include media-query($on-laptop) {
        font-size: 36px;
    }
}

.post-content > h2,
.post-content > h3,
.post-content > p,
.post-content > ul,
.post-content > ol {
    width: 800px;
    float:right;
}
.post-content > #markdown-toc {
    width: 230px;
    position: fixed;
    background-color: #3F4B73;
    color: #ccc;

    a {
        color: #eee;
    }
}

@media all and (max-width: 1200px) {
    .post-content > h2,
    .post-content > h3,
    .post-content > p,
    .post-content > ul,
    .post-content > ol {
        width: 610px;
    }
}

@media all and (max-width: 992px) {
    .post-content > h2,
    .post-content > h3,
    .post-content > p,
    .post-content > ul,
    .post-content > ol {
        width: 400px;
    }
}

@media all and (max-width: 768px) {
    .post-content > h2,
    .post-content > h3,
    .post-content > p,
    .post-content > ul,
    .post-content > ol {
        width: auto;
        float: none;
    }
    .post-content > #markdown-toc {
        display: none;
    }
}

.post-content {
    margin-bottom: $spacing-unit;
    font-weight: normal;
    margin-right: 20px;

    .left {
        float: left;
        width: auto;
    }

    ul {
        margin-left: 0;
        padding-left: 15px;
    }
}

/* Language list */
.en:lang(en), .es:lang(es), .pt:lang(pt), .fr:lang(fr) {
    font-weight: bold;
}


.post-languages {
    clear: both;
    padding-top: 4em;

    @include media-query($on-laptop) {
        .language-list,
        .add-translation {
            text-align: center;
        }
    }

    a {
        font-weight: normal;
    }
}

.right {
    float: right;
    margin-left: 14px;
}

.left {
    float: left;
    margin-right: 14px;
}

.center {
    text-align: center;
}

.share {
    position: absolute;
    margin-top: -70px;
    right: -40px;
    text-align: center;
    color: #FFF;
    font-weight: bold;

    p {
        display: block;
        opacity: 0.6;
        height: 40px;
        width: 48px;
        box-shadow: 1px 0px 1px 1px #CCC;
        margin: auto;
        margin-top: 7px;
        border-radius: 6px;

        &:hover {
            opacity: 1;
            width: auto;
        }

        a {
            display: block;
            color: #FFF;
            padding-top: 8px;
            opacity: 0;
            transition: padding-left .5s, width .5s, opacity .2s ease-in;

            &:hover {
                text-decoration: none;
                width: auto;
                opacity: 1;
                padding-left: 50px;
                padding-right: 8px;
            }
        }
    }
    p.twitter {
        background: url("/asserts/img/twitter.png") no-repeat #0c99d5;
        background-position: 8px 4px;
    }

    p.facebook {
        background: url("/asserts/img/facebook.png") no-repeat #3B5998;
        background-position: 8px 4px;
    }
}

div.facebook {
    margin-top: -20px;
}

#markdown-toc {
    padding: 15px 20px 15px 35px;
    background: #f4f7f8;
    margin-left: 0px;
    display: table;
    border-left: solid 2px #acb0bd;
    background-color: #3F4B73;
    color: #ccc;

    a {
        color: #eee;
        font-weight: normal;
    }
}

#tabzilla {
    position:relative;
    float:right
}
#tabzilla a {
    position:relative;
    display:block;
    width:147px;
    height:37px;
    text-indent:120%;
    white-space:nowrap;
    overflow:hidden;
    background-image:url(https://www.mozilla.org/media/img/tabzilla/tabzilla-static.png);
    background-repeat:no-repeat;
    z-index:2
}
@media(-webkit-min-device-pixel-ratio:1.5),(min--moz-device-pixel-ratio:1.5),(-o-min-device-pixel-ratio:3/2),(min-resolution:1.5dppx) {
    #tabzilla a {
        background-image:url(https://www.mozilla.org/media/img/tabzilla/tabzilla-static-high-res.png);
        -webkit-background-size:147px 37px;
        background-size:147px 37px
    }
}
#tabzilla:before {
    position:absolute;
    display:block;
    left:28px;
    top:0;
    width:88px;
    height:26px;
    content:'';
    background-color:transparent;
    z-index:1
}

